--- a/src/components/rightbar/viewpointsEditor/VPNestedTree.scss
+++ b/src/components/rightbar/viewpointsEditor/VPNestedTree.scss
@@ -165,7 +165,7 @@ input.change-boost{
     }
   }
 }
-.btn-delete-green:hover{
+.btn-delete.green:hover{
   background: var(--palette-gg);
 }
 .mid-stuff{
